Fix align track data styling width (#55)

--- a/frontend/src/pages/Main/components/Track/styles.module.scss
+++ b/frontend/src/pages/Main/components/Track/styles.module.scss
@@ -60,5 +60,10 @@
         display: flex;
         align-items: center;
         margin-left: setUnit(15);
+
+        .date {
+            min-width: setUnit(150);
+            text-align: right;
+        }
     }
 }
